# Zahner-Analysis-Python

./: .gitignore  LICENSE  README.md  openapi.yaml  pyproject.toml  server.py  setup.py
.github/workflows/: publish-to-pypi.yml
Examples/BasicIntroduction/: BasicIntroduction.ipynb  BasicIntroduction.py  rc-data.ism  rc-model.isfx
Examples/BasicIntroduction/fit_results/: fit_result.json  fit_samples.ism  fitted.isfx  fitted_simulated.ism  simulated.ism
Examples/ComplexFitConfigurations/: ComplexFitConfigurations.ipynb  ComplexFitConfigurations.py  li-ion-model.isfx
Examples/ComplexFitConfigurations/fit_result/: fit_result.json  fit_samples.ism  fitted.isfx  fitted_simulated.ism
Examples/EditImpedanceData/: EditImpedanceData.ipynb  EditImpedanceData.py  li-ion-battery-edited.ism  li-ion-battery.ism
Examples/ImpedanceVsVoltageSeriesFit/: ImpedanceVsVoltageSeriesFit.ipynb  ImpedanceVsVoltageSeriesFit.py  diode-ac-model.isfx
Examples/ImpedanceVsVoltageSeriesFit/measured_spectras/: 000_mvdc.ism  025_mvdc.ism  050_mvdc.ism  075_mvdc.ism  100_mvdc.ism  125_mvdc.ism  150_mvdc.ism  175_mvdc.ism  200_mvdc.ism  225_mvdc.ism  250_mvdc.ism  275_mvdc.ism  300_mvdc.ism
Examples/SetupCompensation/: SetupCompensation.ipynb  SetupCompensation.py
Examples/SetupCompensation/ExampleData/: 500uR_measurement_pro.ism  (+2 more)
Examples/ZHIT/: RC-R-L.isfx  ZHIT.ipynb  ZHIT.ism  ZHIT.py  drift.ism
LICENSES/: jupyter  matplotlib  numpy  requests  scipy
zahner_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
zahner_analysis/analysis_tools/: analysis_connection.py  eis_fitting.py  error.py  setup_compensation.py
zahner_analysis/file_export/: ism_export.py
zahner_analysis/file_import/: impedance_model_import.py  isc_import.py  ism_import.py  iss_import.py  isw_import.py  seqtxt_import.py  thales_file_utils.py
zahner_analysis/plotting/: impedance_plot.py
(+52 files in other folders)
